--- a/lab01-report.Rmd
+++ b/lab01-report.Rmd
@@ -8,6 +8,7 @@ output:
     toc_float: true
     toc_collapsed: true
     theme: lumen
+    css: assets/styles.css
 ---
 
 ```{r setup, include=FALSE}
@@ -30,15 +31,22 @@ Depending on your instruction method (synchronous or asynchronous), complete the
 
 > **1.** Which of the variables in `penguins` are *quantitative* (or *numeric*) and which are *categorical*?
 
-  *Answer:*  Replace this text with your answer.
-
+<div class="answer">
+  
+  Replace this text with your answer. Do NOT modify 
+  
+</div>
 
 > **2.** Make a bar chart for the number of penguins observed on each island in the Palmer Archipelago. You will need to use the `island` variable in the `penguins` data set. *Hint: you can use existing code from above, and be sure to change the axis labels and title too!* \n
 If you have time, play around with the colors! (things like "red", "yellow", "blue" work, but see [here](http://www.stat.columbia.edu/~tzheng/files/Rcolor.pdf) for a list of possible color names in R if you're more adventurous.)
 
+<div class="answer">
+
 ```{r islandPlot, error = T}
 # Get started by copying and pasting the code from the speciesPlot chunk above! (Remember that this text is a comment, so it's not run by R; you can delete it if you want.)
 ```
+
+</div>
 
 > **3.** Recreate the numerical summaries for the `bill_length_mm` variable. (*Hint: copy/paste and alter the code from earlier.*) What is the mean (average) bill length?
 
@@ -69,7 +77,7 @@ Each week, this section of the lab will have you dive deeper into the analysis. 
   At the top of the document, make sure you've changed the `author` field to your name (in quotes!). If you'd like, change the date as well.
 
 When you've finished the lab, click the **Knit** button one last time.<br />
-![Click the "Knit" button at the top of the editor pane"](images/knit-button.jpg)
+![Click the "Knit" button at the top of the editor pane"](assets/images/knit-button.jpg)
 
 Give yourself a high five - you just wrote code! *Do not violate social distancing guidelines to give anyone else a high five :(*
 
@@ -81,21 +89,21 @@ constantly update the numbering when you move things around in editing! -->
 
   #### If you're using RStudio Cloud
   1. In the Files pane, check the box next to `lab01report.html`: </br>
-  ![Check the box next to `lab01report.html`](images/html-checkbox.jpg)
+  ![Check the box next to `lab01report.html`](assets/images/html-checkbox.jpg)
 2. Click More > Export... </br>
-  ![Click the More menu, then Export](images/html-export.jpg)
+  ![Click the More menu, then Export](assets/images/html-export.jpg)
 3. Click Download and save the file on your computer in a folder you'll remember and be able to find later. You can just call the file `lab01report.html` or whatever else you'd like (as  long as you remember what you called it). </br>
-  ![Click Download to save the file](images/html-download-button.jpg)
+  ![Click Download to save the file](assets/images/html-download-button.jpg)
 
 #### If you're using RStudio installed on your computer
 1. Locate the `lab01report.html` file on your computer. The file will be saved in the location indicated at the top of the files pane. <br>
-  ![Use the RStudio files pane to find where `lab01report.html` is saved.](images/desktop-filepath.jpg)
+  ![Use the RStudio files pane to find where `lab01report.html` is saved.](assets/images/desktop-filepath.jpg)
 
 #### Submission to Canvas
 
 1. Click the "Assignments" panel on the left side of the page. Scroll to find "Lab 1", and open the assignment. Click "Submit Assignment". <br />
-  ![Click the Submit Assignment button in the Lab 1 assigment.](images/canvas-lab1.jpg)
+  ![Click the Submit Assignment button in the Lab 1 assigment.](assets/images/canvas-lab1.jpg)
 
 2. Towards the bottom of the page, you'll be able to choose `lab01report.html` from the folder you saved it in from RStudio Cloud or noted if you're using RStudio Desktop. **You will only be able to upload a .html file -- do not upload any other file type.** <br />
-  ![Upload lab01report.html to Canvas](images/canvas-file-upload.jpg)
+  ![Upload lab01report.html to Canvas](assets/images/canvas-file-upload.jpg)
 3. Click "Submit Assignment". You're done!
